docs/assets/css/extra.css
/*
Spacelift color scheme

See Sass variables available: https://github.com/squidfunk/mkdocs-material/blob/master/src/assets/stylesheets/main/_colors.scss
*/

:root {
  --color-default-white: #fff;
  --color-primary-main: #7C47FC;
  --color-primary-light: #9A70FF;
  --color-default-primary: #131417;
  --color-default-outline: #D1D2D9;
  --bg-dark: #171721;
}


[data-md-color-scheme="spacelift"] {
  --md-accent-fg-color: #2E89F3;
  --md-typeset-a-color: #0B75F2;
  --md-typeset-color: #4A4D57;
}

header.md-header {
  background-color: var(--color-default-primary);
  height: 88px;
  padding-left: 100px;
  padding-right: 100px;
}

.md-header__button.md-logo.logo--small {
  display: none;
}

@media (max-width: 1219px) {
  header.md-header {
    padding-left: 20px;
    padding-right: 20px;
  }

  .md-header__button.md-logo.logo--small {
    display: flex;
    align-items: center;
    order: 1;
    margin-right: auto;
  }

  nav.md-header__inner {
    display: flex;
  }

  label[for=__drawer] {
    order: 3;
  }

  label[for=__search] {
    order: 2;
  }

  .md-search {
    order: 2;
  }

  .md-header__title {
    display: none;
  }

  .md-sidebar--primary {
    width: 100%;
  }

  [dir=ltr] .md-sidebar--primary {
    left: -100%;
  }

  [data-md-toggle=drawer]:checked~.md-container .md-sidebar--primary {
    transform: translateX(100%);
  }
}

.close-button {
  font-size: 40px;
  width: 24px;
  color: var(--color-default-white);
  cursor: pointer;
}

.close-button:hover {
  color: var(--color-default-outline);
}

.close-button svg {
  width: 24px;
}

header.md-header > nav {
  height: 88px;
  padding: 0;
}

header.md-header > nav > a.md-logo {
  height: 42px;
  padding: 0;
}

header.md-header > nav > a.md-logo > img {
  height: 42px !important;
}

/* Hide the current page title in the header */
header .md-ellipsis {
  visibility: hidden;
  display: none;
}

header .md-search__form {
  border-radius: 6px !important;
}

header .md-search__input {
  border-radius: 6px;
}

/* Hide the "Spacelift" primary menu title */
.md-nav--primary > .md-nav__title {
  display: none;
}

.md-nav__list {
  color: var(--color-default-primary);
}

.md-search__input {
  border-color: #4A4D57;
  border-style: solid;
  border-width: 1px;
}

.md-typeset {
  font-size: 17px;
  line-height: 30px;
  font-weight: 400;
}

.md-typeset h1 {
  color: var(--color-default-primary);
  font-size: 32px;
  font-weight: 800;
  margin-bottom: 18px;
}

.md-typeset h2 {
  color: var(--color-default-primary);
  font-size: 28px;
  font-weight: 700;
  margin-bottom: 12px;
  margin-top: 20px;
}

.md-typeset h3 {
  color: var(--color-default-primary);
  font-size: 24px;
  font-weight: 700;
  margin-bottom: 12px;
  margin-top: 20px;
}

.md-typeset h4 {
  color: var(--color-default-primary);
  font-size: 20px;
  font-weight: 600;
  margin-bottom: 12px;
}

.header__links {
  display: flex;
  align-items: center;
  margin-left: 24px;
}

@media (max-width: 1219px) {
  .header__links {
    display: none;
  }
}

.header__link {
  font-weight: 400;
  font-size: 17px;
  line-height: 24px;
  color: var(--color-default-white);
  display: flex;
  align-items: center;
  margin-left: 16px;
}

.header__link:hover {
  color: var(--color-default-outline);
}

.header__link:first-child {
  margin-left: 16px;
}

.header__link-icon {
  margin-left: 8px;
}

.header__button {
  font-style: normal;
  font-weight: 600;
  font-size: 17px;
  line-height: 24px;
  color: var(--color-default-white);
  white-space: nowrap;
  text-align: center;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border-radius: 6px;
  transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
  padding: 7px 16px;
  margin-left: 16px;
}

.header__button--outlined {
  border: 1px solid var(--color-default-white);
}

.header__button--outlined:hover {
  background: var(--color-default-white);
  color: var(--color-default-primary);
}

.header__button--contained {
  background: var(--color-primary-main);
  border: 1px solid var(--color-primary-main);
}

.header__button--contained:hover {
  background: var(--color-primary-light);
  border: 1px solid var(--color-primary-light);
}

@media (max-width: 1219px) {
  .md-sidebar--primary {
    background-color: var(--color-default-primary);
  }

  .md-nav--primary .md-nav__title~.md-nav__list {
    background-color: var(--color-default-primary);
  }

  .md-nav--primary :is(.md-nav__title,.md-nav__item) {
    color: var(--color-default-white);
    font-size: 17px;
    line-height: 33px;
  }

  .md-nav--primary .md-nav__item--active>.md-nav__link,
  .md-nav--primary .md-nav__item--active>.md-nav__link:is(:focus,:hover),
  .md-nav__link:is(:focus,:hover) {
    color: var(--color-default-outline);
  }

  .md-nav--primary, .md-nav--primary .md-nav {
    background-color: var(--color-default-primary);
  }
}

@media (max-width: 959px) {
  .md-nav__link--passed,
  .md-nav__item .md-nav__link--active {
    color: var(--color-default-white);
  }
}

.mobile-nav-wrapper {
  display: none;
  position: fixed;
  top: 0;
  height: 88px;
  left: 0;
  right: 0;
  background-color: var(--color-default-primary);
  z-index: 5;
  align-items: center;
  justify-content: space-between;
  padding: 12px 32px 12px 12px;
}

[data-md-toggle=drawer]:checked~.md-container .mobile-nav-wrapper {
  display: flex;
}

.md-sidebar--primary {
  top: 88px;
}


.site-footer{
  color: dodgerblue;
  font-size: 1em !important;
}



.site-footer .container .row{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 32px;
}

.md-footer-meta {
  background-color: black;
  color: dodgerblue;
}

.site-footer a{
  vertical-align: top;
  text-decoration: none;
  color: dodgerblue;
  background-color: black;
  

}
.site-footer hr{
  border-color: dodgerblue;
  height: 0.5rem !important;
  
}

.site-footer .brand-icons svg{
  font-size: 2em;
  color: white;
}

@media (max-width: 991px) {
  .site-footer .container .col-sm {
    display: block;
    
  }
  .site-footer .container .row{
    display: block;
    justify-content: space-between;
    align-items: center;
    padding: 0 32px;
  }
  
  .site-footer a{
    text-decoration: none;
  }
  
  .site-footer .brand-icons svg{
    font-size: 3rem;
  }
}

